--- a/TicketAPI/appsettings.json
+++ b/TicketAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "tickets" : "Server=localhost:5432;Database=tickets;UserId=postgress;Password=postgress123;"
+    "tickets": "Host=localhost; Port=5432; Database=tickets; Username=postgres; Password=postgress123"
 
   },
     "Logging": {
